[package]
name = "wrkrs"
version = "0.1.0"
authors = ["Xargin <cao1988228@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async related
tokio = { version = "0.2", features = ["full"]}
futures = "0.3"

# cli related
clap = "2.33.0"
ansi_term = "0.12"
